<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.amahler4096.projecttracker.ProjectActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/name_textview"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/category_textview"/>

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/start_date_textview"/>

        <EditText
            android:id="@+id/start_date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/end_date_textview"/>

        <EditText
            android:id="@+id/end_date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"/>

    </LinearLayout>

    <Button
        android:id="@+id/to_calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_calendar_button"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/description_textview"/>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/notes_textview"/>

    <EditText
        android:id="@+id/notes_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
